# teamspeak-management-tools.rs

./: .gitignore  Cargo.toml  README.md  config.toml.default
.github/workflows/: main.yml
src/: auto_channel.rs  configure.rs  datastructures.rs  hypervisor.rs  main.rs  observer.rs  socketlib.rs  telegram.rs  tracker.rs  types.rs
src/plugins/: kv.rs  kv_ng.rs  mod.rs  totp.rs  tracker.rs
src/plugins/storage/: leveldb.rs  mod.rs  redis.rs
