[package]
name = "teamspeak-management-tools"
version = "5.2.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.68"
chrono = "0.4.19"
clap = { version = "4", features = ["cargo"] }
#concurrent-queue = "^2.2"
country-emoji = "^0.2"
env_logger = "0.11.3"
futures-util = "0.3"
kstool = "0.2.1"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
once_cell = "^1.10"
redis = { version = "0.25", features = ["tokio-comp"] }
rusty-leveldb = { version = "3.0.0" }
serde = { version = "1", features = ["derive"] }
serde-teamspeak-querystring = "0.3.1"
serde_json = "1"
sqlx = { version = "^0.7", features = [
    "sqlite",
    "runtime-tokio-rustls",
], optional = true }
tap = "1"
teloxide = { version = "0.12.2", default-features = false, features = [
    "rustls",
] }
teloxide-macros = "0.7.1"
tokio = { version = "1", features = ["full"] }
toml = "^0.8"
tuple-conv = "1.0.1"
#uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
helper-generator = { git = "https://github.com/KunoiSayami/helper-generator.git" }

[profile.release]
lto = true
panic = "abort"

[features]
default = []
all = ["tracker"]
tracker = ["sqlx"]
