[package]
name = "teamspeak-management-tools"
version = "6.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.80"
chrono = "0.4.38"
clap = { version = "4", features = ["cargo"] }
#concurrent-queue = "^2.2"
country-emoji = "^0.2"
env_logger = "0.11.3"
futures-util = "0.3"
kstool = "0.2.1"
kstool-helper-generator = "0.4.4"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
once_cell = "^1.10"
redis = { version = "0.27", features = ["tokio-comp"] }
rusty-leveldb = { version = "3.0.0" }
serde = { version = "1", features = ["derive"] }
serde-teamspeak-querystring = "0.3.1"
serde_json = "1"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
], optional = true }
tap = "1"
teloxide = { version = "0.13", default-features = false, features = [
    "rustls",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
toml = "^0.8"
tuple-conv = "1.0.1"
#uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
lto = true
panic = "abort"

[profile.pre-release]
inherits = "release"
lto = false

[features]
default = []
all = ["tracker"]
tracker = ["sqlx"]
