[package]
name = "teamspeak-management-tools"
version = "6.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4.38"
clap = { version = "4", features = ["cargo"] }
#concurrent-queue = "^2.2"
country-emoji = "0.3.2"
env_logger = "0.11"
futures-util = "0.3"
kstool = "0.2.1"
kstool-helper-generator = "0.4.4"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_debug",
] }
redis = { version = "0.32.7", features = ["tokio-comp"] }
rusty-leveldb = { version = "4.0.0" }
serde = { version = "1", features = ["derive"] }
serde-teamspeak-querystring = "0.3.1"
serde_json = "1"
sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
], optional = true }
tap = "1"
teloxide = { version = "0.17.0", default-features = false, features = [
    "rustls",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
toml = "0.9.8"
tuple-conv = "1.0.1"
#uuid = { version = "1", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[profile.release]
lto = true
panic = "abort"

[profile.pre-release]
inherits = "release"
lto = false

[features]
default = []
all = ["tracker"]
tracker = ["sqlx"]
